--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.html
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.html
@@ -1,7 +1,7 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
     <img
-      src="{{ user.photoUrl || '../../../assets/user.png'}}"
+      src="{{ user.photoUrl || '../../../assets/user.png' }}"
       class="card-img-top"
       alt="{{ user.knownAs }}"
     />
@@ -12,10 +12,18 @@
         </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary" (click)="sendLike(user.id)"><i class="fa fa-heart"></i></button>
+        <button class="btn btn-primary" (click)="sendLike(user.id)">
+          <i class="fa fa-heart"></i>
+        </button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary"><i class="fa fa-envelope"></i></button>
+        <button
+          class="btn btn-primary"
+          [routerLink]="['/members/', user.id]"
+          [queryParams]="{tab: 3}"
+        >
+          <i class="fa fa-envelope"></i>
+        </button>
       </li>
     </ul>
   </div>
