--- a/DatingApp-SPA/src/app/members/member-list/member-list.component.html
+++ b/DatingApp-SPA/src/app/members/member-list/member-list.component.html
@@ -1,102 +1,131 @@
-<div class="text-center mt-3">
-  <h2>Your matches - {{ pagination.totalItems }} found</h2>
-</div>
+<div class="container text-center mt-3">
+  <div class="row justify-content-center text-center">
+    <h4>
+      {{ "found" | translate }} {{ pagination.totalItems }}
+      {{ "YourMatches" | translate }}
+    </h4>
+  </div>
 
-<div class="container mt-3">
-  <form class="form-inline" #form="ngForm" (ngSubmit)="loadUsers()" novalidate>
-    <div class="form-group">
-      <label for="minAge">Age From</label>
-      <input
-        type="number"
-        class="form-control ml-1"
-        style="width: 70px"
-        id="minAge"
-        [(ngModel)]="userParams.minAge"
-        name="minAge"
-      />
-    </div>
-
-    <div class="form-group px-2">
-      <label for="maxAge">Age To</label>
-      <input
-        type="number"
-        class="form-control ml-1"
-        style="width: 70px"
-        id="maxAge"
-        [(ngModel)]="userParams.maxAge"
-        name="maxAge"
-      />
-    </div>
-
-    <div class="form-group px-2">
-      <label for="gender">Show: </label>
-      <select
-        class="form-control ml-1"
-        style="width: 130px"
-        id="gender"
-        [(ngModel)]="userParams.gender"
-        name="gender"
+  <div class="container mt-3 p-0">
+    <div class="text-left">
+      <button
+        type="button"
+        class="btn btn-primary"
+        (click)="isCollapsed = !isCollapsed"
+        [attr.aria-expanded]="!isCollapsed"
+        aria-controls="collapseBasic"
       >
-        <option *ngFor="let gender of genderList" [value]="gender.value"
-          >{{ gender.display }}
-        </option>
-      </select>
+        <i class="fa fa-search mr-2"></i>{{ "Filters" | translate }}
+      </button>
     </div>
-    <button type="submit" class="btn btn-primary" style="margin-left:10px">
-      Apply Filters
-    </button>
-    <button
-      type="button"
-      class="btn btn-info"
-      (click)="resetFilters()"
-      style="margin-left:10px"
-    >
-      Reset Filter
-    </button>
-    <div class="col">
-      <div class="btn-group float-right">
-        <button
-          type="button"
-          name="orderBy"
-          class="btn btn-primary"
-          [(ngModel)]="userParams.orderBy"
-          (click)="loadUsers()"
-          btnRadio="lastActive"
+    <div id="collapseBasic" [collapse]="isCollapsed">
+      <div class="card card-body mt-3 pl-1 pr-1">
+        <form
+          class="form-inline justify-content-center"
+          #form="ngForm"
+          (ngSubmit)="loadUsers()"
+          novalidate
         >
-          Last Active
-        </button>
-        <button
-          type="button"
-          name="orderBy"
-          class="btn btn-primary"
-          [(ngModel)]="userParams.orderBy"
-          (click)="loadUsers()"
-          btnRadio="created"
-        >
-          Newest Members
-        </button>
+          <div class="form-group text-center ml-2">
+            <label class="m-1" for="minAge">{{ "AgeFrom" | translate }}</label>
+            <input
+              type="number"
+              class="form-control ml-2"
+              style="width: 70px"
+              id="minAge"
+              [(ngModel)]="userParams.minAge"
+              name="minAge"
+            />
+          </div>
+
+          <div class="form-group text-center ml-2">
+            <label class="m-1" for="maxAge">{{ "AgeTo" | translate }}</label>
+            <input
+              type="number"
+              class="form-control ml-2"
+              style="width: 70px"
+              id="maxAge"
+              [(ngModel)]="userParams.maxAge"
+              name="maxAge"
+            />
+          </div>
+
+          <div class="form-group text-center ml-1">
+            <label class="m-1" for="gender">{{ "Show" | translate }}: </label>
+            <select
+              class="form-control ml-2"
+              style="width: 130px"
+              id="gender"
+              [(ngModel)]="userParams.gender"
+              name="gender"
+            >
+              <option *ngFor="let gender of genderList" [value]="gender.value"
+                >{{ gender.display | translate }}
+              </option>
+            </select>
+          </div>
+          <button
+            type="submit"
+            class="btn btn-primary"
+            style="margin-left:10px"
+          >
+            {{ "ApplyFilters" | translate }}
+          </button>
+          <button
+            type="button"
+            class="btn btn-info"
+            (click)="resetFilters()"
+            style="margin-left:10px"
+          >
+            {{ "ResetFilters" | translate }}
+          </button>
+          <div class="col text-center mt-2">
+            <div class="btn-group">
+              <button
+                type="button"
+                name="orderBy"
+                class="btn btn-primary mr-3"
+                [(ngModel)]="userParams.orderBy"
+                (click)="loadUsers()"
+                btnRadio="lastActive"
+              >
+                {{ "LastActive" | translate }}
+              </button>
+              <button
+                type="button"
+                name="orderBy"
+                class="btn btn-primary"
+                [(ngModel)]="userParams.orderBy"
+                (click)="loadUsers()"
+                btnRadio="created"
+              >
+                {{ "NewestMembers" | translate }}
+              </button>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
-  </form>
-  <br />
-  <div class="row">
-    <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
-      <app-member-card [user]="user"></app-member-card>
+    <br />
+    <div class="row justify-content-center">
+      <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
+        <app-member-card [user]="user"></app-member-card>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="d-flex justify-content-center">
-  <pagination
-    [boundaryLinks]="true"
-    [totalItems]="pagination.totalItems"
-    [itemsPerPage]="pagination.itemsPerPage"
-    [(ngModel)]="pagination.currentPage"
-    (pageChanged)="pageChanged($event)"
-    previousText="&lsaquo;"
-    nextText="&rsaquo;"
-    firstText="&laquo;"
-    lastText="&raquo;"
-  >
-  </pagination>
+  <div class="d-flex justify-content-center">
+    <pagination
+      [boundaryLinks]="true"
+      [totalItems]="pagination.totalItems"
+      [itemsPerPage]="pagination.itemsPerPage"
+      [(ngModel)]="pagination.currentPage"
+      (pageChanged)="pageChanged($event)"
+      previousText="&lsaquo;"
+      nextText="&rsaquo;"
+      firstText="&laquo;"
+      lastText="&raquo;"
+    >
+    </pagination>
+  </div>
 </div>
