--- a/DatingApp-SPA/src/app/messages/messages.component.html
+++ b/DatingApp-SPA/src/app/messages/messages.component.html
@@ -1,43 +1,43 @@
-<div class="container mt-5">
-  <div class="row">
-    <div class="btn-group">
+<div class="container mt-2">
+  <div class="row justify-content-center">
+    <div class="btn-group mb-2">
       <button
-        class="btn btn-primary"
+        class="btn btn-primary btn-sm mr-1"
         [(ngModel)]="messageContainer"
         btnRadio="Unread"
         (click)="loadMessages()"
       >
-        <i class="fa fa-envelope"></i> Unread
+        <i class="fa fa-envelope pr-1 ml-0"></i> {{ 'Unread' | translate }}
       </button>
       <button
-        class="btn btn-primary"
+        class="btn btn-primary btn-sm mr-1"
         [(ngModel)]="messageContainer"
         btnRadio="Inbox"
         (click)="loadMessages()"
       >
-        <i class="fa fa-envelope-open"></i> Inbox
+        <i class="fa fa-envelope-open pr-1 ml-0"></i> {{ 'Inbox' | translate }}
       </button>
       <button
-        class="btn btn-primary"
+        class="btn btn-primary btn-sm"
         [(ngModel)]="messageContainer"
         btnRadio="Outbox"
         (click)="loadMessages()"
       >
-        <i class="fa fa-paper-plane"></i> Outbox
+        <i class="fa fa-paper-plane pr-1 ml-0"></i>{{ 'Outbox' | translate }}
       </button>
     </div>
   </div>
 
-  <div class="row" *ngIf="messages.length == 0">
-    <h3>No messages</h3>
+  <div class="row justify-content-center" *ngIf="messages.length == 0">
+    <h3>{{ 'NoMessages' | translate }}</h3>
   </div>
 
   <div class="row" *ngIf="messages.length > 0">
     <table class="table table-hover" style="cursor: pointer">
       <tr>
-        <th style="width: 40%">Message</th>
-        <th style="width: 20%">From / To</th>
-        <th style="width: 20%">Sent / Received</th>
+        <th style="width: 40%">{{ 'Message' | translate }}</th>
+        <th style="width: 20%">{{ 'MessagesFrom' | translate }}</th>
+        <th style="width: 20%">{{ 'MessageSent' | translate }}</th>
         <th style="width: 20%"></th>
       </tr>
       <tr
@@ -67,7 +67,9 @@
         </td>
         <td>{{ message.messageSent | timeAgo }}</td>
         <td>
-          <button class="btn btn-danger" (click)="$event.stopPropagation()" (click)="deleteMessage(message.id)">Delete</button>
+          <button class="btn btn-danger" (click)="$event.stopPropagation()" (click)="deleteMessage(message.id)">
+            {{ 'Delete' | translate }}
+          </button>
         </td>
       </tr>
     </table>
