--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -1,37 +1,48 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+<nav class="navbar navbar-expand-md navbar-dark bg-primary m-2">
   <div class="container">
-    <a class="navbar-brand" [routerLink]="['/home']">Dating App</a>
-
-    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
+    <h2><a class="navbar-brand" [routerLink]="['/home']">{{ "Datings" | translate }}</a></h2>
+    
+    <ul *ngIf="loggedIn()" class="navbar-nav mr-auto mt-2">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/members']">Matches</a>
+        <a class="nav-link" [routerLink]="['/members']">{{ "Matches" | translate }}</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/lists']">List</a>
+        <a class="nav-link" [routerLink]="['/lists']">{{ "List" | translate }}</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/messages']">Messages</a>
+        <a class="nav-link" [routerLink]="['/messages']">{{ "Messages" | translate }}</a>
       </li>
       <li *appHasRole="['Admin','Moderator']" class="nav-item" routerLinkActive="active">
-        <a class="nav-link" [routerLink]="['/admin']">Admin</a>
+        <a class="nav-link" [routerLink]="['/admin']">{{ "Admin" | translate }}</a>
       </li>
     </ul>
 
+    <span class="mr-3 langsel">
+      <select #langSelect class="langSelect" (change)="changeLang(langSelect.value)">
+        <option
+          *ngFor="let lang of translate.getLangs()"
+          [value]="lang"
+          [selected]="lang === translate.currentLang"
+          >{{ lang }}</option
+        >
+      </select>
+    </span>
+
     <div *ngIf="loggedIn()" class="dropdown" dropdown>
       <span class="mr-1">
-        <img src="{{photoUrl || '../../assets/user.png'}}" alt="">
+        <img class="mb-2" src="{{photoUrl || '../../assets/user.png'}}" alt="">
       </span>
       <a class="dropdown-toggle text-light" dropdownToggle>
-        Welcome {{ authService.decodedToken?.unique_name | titlecase }}
+        {{ "Welcome" | translate }} {{ authService.decodedToken?.unique_name | titlecase }}
       </a>
 
       <div class="dropdown-menu mt-3" *dropdownMenu>
         <a class="dropdown-item" [routerLink]="['/member/edit']" 
-          ><i class="fa fa-user"></i>Edit profile</a
+          ><i class="fa fa-user pr-2"></i>{{ "EditProfile" | translate }}</a
         >
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" (click)="logout()"
-          ><i class="fa fa-sign-out"></i>Logout</a
+          ><i class="fa fa-sign-out pr-2"></i>{{ "Logout" | translate }}</a
         >
       </div>
     </div>
@@ -43,18 +54,18 @@
       (ngSubmit)="login()"
     >
       <input
-        class="form-control mr-sm-2"
+        class="form-control mr-sm-2 mb-2"
         type="text"
         name="username"
-        placeholder="Username"
+        placeholder="{{ 'Username' | translate }}"
         required
         [(ngModel)]="model.username"
       />
       <input
-        class="form-control mr-sm-2"
+        class="form-control mr-sm-2 mb-2"
         type="password"
         name="password"
-        placeholder="Password"
+        placeholder="{{ 'Password' | translate }}"
         required
         [(ngModel)]="model.password"
       />
@@ -63,7 +74,7 @@
         class="btn btn-success my-2 my-sm-0"
         type="submit"
       >
-        Login
+      {{ "Login" | translate }}
       </button>
     </form>
   </div>
